test/programs/valid/modifiers/final_classes.java
protected final class A {
    public A() {}
}
