test/programs/invalid/constructors/explicit_super_call.java
protected class A {
  public A() {  super(); }
}

